--- a/application/main.html
+++ b/application/main.html
@@ -2,9 +2,124 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<title>Insert title here</title>
+<title>问卷设计界面</title>
+<style type="text/css">
+.div1 {
+	width: 488px;
+	height: 700px;
+	padding: 10px;
+	border: 1px solid #aaaaaa;
+	margin: 10px 20px;
+}
+
+h1,h2,h3 {
+	text-align: center;
+}
+</style>
+<script type="text/javascript" src="../library/jquery/jquery-1.12.0.js"></script>
+
+<script type="text/javascript">
+var index = 1;
+function allowDrop(ev)
+{
+	ev.preventDefault();
+}
+
+function drag(ev)
+{
+	ev.dataTransfer.setData("Text",ev.target.id);
+}
+
+function drop(ev)
+{
+	ev.preventDefault();
+	var data=ev.dataTransfer.getData("Text");
+	var newElement = document.createElement('div');
+	newElement.setAttribute('id', data+'_new'+index);
+	index = index + 1;
+	newElement.setAttribute('draggable', 'true'); 
+	newElement.setAttribute('ondragstart', 'drag(event)');
+	newElement.innerHTML = document.getElementById(data).innerHTML; 
+	ev.target.appendChild(newElement);
+	//ev.target.appendChild(document.getElementById(data));
+}
+
+function dropout(ev){
+	ev.preventDefault();
+	var data=ev.dataTransfer.getData("Text");
+	var myElement = document.getElementById(data);
+	ev.target.appendChild(myElement);
+	ev.target.removeChild(myElement);
+}
+</script>
+
+<script type="text/javascript">
+$(function() {
+	$("#final").on('click',".canedit",function() {
+		var td = $(this);
+		var txt = td.text();
+		var input = $("<input type='text'value='" + txt + "'/>");
+		td.html(input);
+		input.click(function() { return false; });
+
+		//获取焦点
+		input.trigger("focus");
+		//文本框失去焦点后提交内容，重新变为文本
+		input.blur(function() {
+			var newtxt = $(this).val();
+			//判断文本有没有修改
+			if (newtxt != txt) {
+				td.html(newtxt);
+			}else{
+				td.html(newtxt);
+			}
+		});
+
+	});
+
+});
+
+
+
+
+</script>
 </head>
 <body>
+<h1>问卷设计</h1>
+<table>
+	<tr>
+		<td>
+		<h3>问卷</h3>
+		<div id="final" class="div1" ondrop="drop(event)"
+			ondragover="allowDrop(event)"></div>
+		</td>
+		<td>
+		<h3>可用模板</h3>
+		<div class="div1" ondrop="dropout(event)"
+			ondragover="allowDrop(event)">
+		<table>
+			<tr>
+				<div id="drag_title" draggable="true" ondragstart="drag(event)">
+				<h2 class="canedit">标题</h2>
+				</div>
+			</tr>
+			<tr>
+				<div id="drag_problem_template1" draggable="true"
+					ondragstart="drag(event)">
+				<p class="canedit">问题</p>
+				<input type="radio" name="group1" value="first" checked="checked" /><span
+					class="canedit">选项1</span> <input type="radio" name="group1"
+					value="second" /><span class="canedit">选项1</span> <input
+					type="radio" name="group1" value="third" /><span class="canedit">选项1</span>
+				<input type="radio" name="group1" value="fourth" /><span
+					class="canedit">选项1</span></div>
+			</tr>
+		</table>
+		</div>
+		</td>
+	</tr>
+</table>
+
 
 </body>
 </html>
