--- a/public/demo1.html
+++ b/public/demo1.html
@@ -25,7 +25,9 @@
     <script type="text/javascript" src="./bootstrap_layout_files/bootstrap/js/bootstrap.min.js">
     </script>
     <!--link href="./bootstrap_layout_files/my_layout.css" rel="stylesheet" /--> 
-    <script type="text/javascript" src="./script/my_new_scripts.js">
+    <script type="text/javascript" src="./scripts/my_new_scripts.js">
+    </script>
+    <script type="text/javascript" src="./scripts/mange_controls.js">
     </script>
     <link href="./css/demo.less.css" rel="stylesheet" /> 
   </head>
@@ -36,86 +38,16 @@
         <div class="span2">
           <div class="container-fluid left-frame" style="">
             <div class="row-fluid draggable-control-frame">
-              <div class="layout">
+              <div class="layout" id="layout-container">
                 <h2>
                   layout
                 </h2>
-                <div class="single-control">
-                  <div class="preview">
-                    layout1
-                  </div>
-                  <div class="view">
-                    <div class="row-fluid clearfix">
-                      <div class="span12 column">
-                      </div>
-                    </div>
-                  </div>
-                </div>
-                <div class="single-control">
-                  <div class="preview">
-                    layout2
-                  </div>
-                  <div class="view">
-                    <div class="row-fluid clearfix">
-                      <div class="span6 column">
-                      </div>
-                      <div class="span6 column">
-                      </div>
-                    </div>
-                  </div>
-                </div>
-                <div class="single-control">
-                  <div class="preview">
-                    layout3
-                  </div>
-                  <div class="view">
-                    <div class="row-fluid clearfix">
-                      <div class="span12 column">
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
+                
               <hr />
-              <div class="controls">
+              <div class="controls" id="controls-container">
                 <h2>
                   controls
                 </h2>
-                <div class="single-control">
-                  <div class="preview">
-                    control_one
-                  </div>
-                  <div class="view">
-                    <div class="container-fluid">
-                      <div>
-                        <h3>
-                          问题X
-                        </h3>
-                      </div>
-                      <div class="row-fluid">
-                        <div class="span3">
-                          <input type="radio" name="group1" value="first" />
-                          <span class="canedit">
-                            A.选项1
-                          </span>
-                        </div>
-                        <div class="span3">
-                          <input type="radio" name="group1" value="first" />
-                          <span class="canedit">
-                            B.选项2
-                          </span>
-                        </div>
-                        <div class="span3">
-                          <input type="radio" name="group1" value="first" />
-                          <span class="canedit">
-                            C.选项3
-                          </span>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
             </div>
           </div>
         </div>
