修改加入控件后，布局出错，以及新加的布局控件无法添加新控件的问题

--- a/public/demo1.html
+++ b/public/demo1.html
@@ -42,12 +42,13 @@
                 <h2>
                   layout
                 </h2>
-                
+              </div>
               <hr />
               <div class="controls" id="controls-container">
                 <h2>
                   controls
                 </h2>
+              </div>
             </div>
           </div>
         </div>
